Add new patches

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -270,4 +270,19 @@ patches = [
     'name': 'webcursor_1894',
     'path': '../content/common/cursors/',
   },
+  {
+    # Fixes encoding
+    'name': 'omxtypes',
+    'path': '../third_party/openmax_dl/',
+  },
+  {
+    # Fixes encoding
+    'name': 'skia',
+    'path': '../third_party/skia/',
+  }
+  ,
+  {
+    'name': 'ffmpeg',
+    'path': '../third_party/ffmpeg/',
+  }
 ]
